# playground-c

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
libs/: CMakeLists.txt  queue.c  queue.h
src/: args_thread.c  multithread_server.c  pool_server.c  random.c  resample.c  ret_thread.c  safe_thread.c  server.c  simple_thread.c  sine_wave.c  sound.c  tokenizer.c  window.c
